--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bedium",
   "version": "0.0.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "start": "node server.js"
   },
